queryDSL refactoring